src/test/resources/acceptance/reject/printNoExpression.ul
int id1 ()
{
    print;
}
